--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <header>
 <title>Heta Shah's Portal</title>
-<link rel="stylesheet" href="hetacss.css">
+<link rel="stylesheet" href="css\master.css">
 <link rel="FaviconIcon" href="favicon.ico" type="image/x-icon">
 <link rel="shortcut" href="favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
