--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 
   <header>
     <title>Heta Shah's Resume</title>
-    <link rel="stylesheet" href="hetacss.css">
+    <link rel="stylesheet" href="css\master.css">
   </header>
 
   <body>
