--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p> I am studying Electronics and Telecommunication engineering</p>
 <p> from Dwarkadas J Sanghvi College of Engineering, Mumbai</p>
 <h2>
-<p><a href="hetaresume1.html">My Resume</a>
+<p><a href="resume.html">My Resume</a>
 </p></h2>
 <h2>Contact</h2>
 
