--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <header>
 <title>Heta Shah's Portal</title>
-<link rel="stylesheet" href="hetacss.css">
+<link rel="stylesheet" href="css/master.css">
 <link rel="FaviconIcon" href="favicon.ico" type="image/x-icon">
 <link rel="shortcut" href="favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,7 +17,7 @@
 <p> I am studying Electronics and Telecommunication engineering</p>
 <p> from Dwarkadas J Sanghvi College of Engineering, Mumbai</p>
 <h2>
-<p><a href="hetaresume1.html">My Resume</a>
+<p><a href="resume.html">My Resume</a>
 </p></h2>
 <h2>Contact</h2>
 
