--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@ SEMS 1-    8.56</h4>
 
   <footer>
   <hr>
-  <p><a href="hetaresume.html">Back to my portal</a><p>
+  <p><a href="index.html">Back to my portal</a><p>
   </footer>
 
 </html>
