--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
   <body>
     <hr>
 
-    <img src="headshot.jpg" alt="Mountain and Valley view" width="40%">
+    <img src="images\headshot.jpg" alt="Mountain and Valley view" width="40%">
 
     <h1>Heta Shah</h1>
     <h4>EXTC Engineering student, Front end developer, Graphic designer</h4>
