--- a/resume.html
+++ b/resume.html
@@ -38,11 +38,11 @@ SEMS 1-    8.56</h4>
 <h4>10 th Grade -  95%</h4>
     <h2>Skills</h2>
 	<h3>Soft skills</h3>
-    <h4><ul><li>Leadership</li>
+    <ul><li>Leadership</li>
 <li>Communication</li>
 <li>Decision making and management</li>
-<li>Public speaking</li></ul></h4>
-    <h4>Technical Proficiencies</h4>
+<li>Public speaking</li></ul>
+    <h3>Technical Proficiencies</h3>
       <ul>
         <li>Data Analysis Project on Covid 19 </li>
         <li>Computer languages - Basics of Python, C++ , C and HTML , CSS</li>
