--- a/resume.html
+++ b/resume.html
@@ -28,14 +28,14 @@ Assisted in making the Ignite(State Level) magazine pages.</li></ul></p>
 <h3> DJNSS - Volunteer and organizing member </h3>
 <p><ul>Volunteered for various events throughout the year and a part of Blood donation drive.</ul></p>
     <h2>Education</h2>
- <h3>D.J.sanghvi college of engineering</h3>
+ <h2>D.J.sanghvi college of engineering</h2>
 <h6>(in SGPA)</h6>
-    <h4>SEM 4-    10<br>
+    <ul>SEM 4-    10<br>
 SEM 3-    9.85<br>
 SEM 2-    9.78<br>
-SEMS 1-    8.56</h4>
-<h3>ST.ANNES GIRLS HIGH SCHOOL</h3>
-<h4>10 th Grade -  95%</h4>
+SEMS 1-    8.56</ul>
+<h2>ST.ANNES GIRLS HIGH SCHOOL</h2>
+<p>10 th Grade -  95%</p>
     <h2>Skills</h2>
 	<h3>Soft skills</h3>
     <ul><li>Leadership</li>
@@ -49,7 +49,7 @@ SEMS 1-    8.56</h4>
 	<li>Photoshop and Video Editing</li>
       </ul>
 
-    <h3>Current</h3>
+    <h2>Current</h2>
 
       <ul>
         <li>Learning new languages and frame work</li>
