--- a/resume.html
+++ b/resume.html
@@ -31,9 +31,9 @@ Assisted in making the Ignite(State Level) magazine pages.</li></ul></p>
  <h2>D.J.sanghvi college of engineering</h2>
 <h6>(in SGPA)</h6>
     <ul>SEM 4-    10<br>
-SEM 3-    9.85<br>
+SEM 3-    <b>9.85</b><br>
 SEM 2-    9.78<br>
-SEMS 1-    8.56</ul>
+SEM 1-    8.56</ul>
 <h2>ST.ANNES GIRLS HIGH SCHOOL</h2>
 <p>10 th Grade -  95%</p>
     <h2>Skills</h2>
