--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <p> I am studying Electronics and Telecommunication engineering</p>
 <p> from Dwarkadas J Sanghvi College of Engineering, Mumbai</p>
 <h2>
-<p><a href="resume.html">My Resume (click here) </a>
+<p><a href="resume.html">My Resume</p> 
+  <p><h6>(click here) </h6> </p></a>
 </p></h2>
 <h2>Contact</h2>
 
