--- a/resume.html
+++ b/resume.html
@@ -19,11 +19,11 @@
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
 
     <h2>Student Life</h2>
-      <h3> IETE - Vice Chairperson </h3>
+      <h3> IETE - Vice Chairperson (2020-2021)</h3>
 <p><ul><li>Currently managing the team.</li><li>Assisted in publicizing the events in the academic year 2019-2020.</li><li> Graphic designer for the student chapter
 Assisted in making the Ignite(State Level) magazine pages.</li></ul></p>
-<h3> DJS Skylark - Marketing and Creatives </h3>
-<p><ul><li>Went to USA in March 2020 with team, with Skylark achieving 3rd rank worldwide overall.</li><li>Helped in organizing the aerodesign workshop.</li>
+<h3> DJS Skylark - Marketing and Creatives (2019-2020) </h3>
+<p><ul><li>Won 3rd prize worldwide in aero designing competition in Lakeland, Florida,USA</li><li>Helped in organizing the aerodesign workshop.</li>
 <li>Publicized and made digital posts for the team.</li></ul></p>
 <h3> DJNSS - Volunteer and organizing member </h3>
 <p><ul>Volunteered for various events throughout the year and a part of Blood donation drive.</ul></p>
