--- a/resume.html
+++ b/resume.html
@@ -29,10 +29,10 @@ Assisted in making the Ignite(State Level) magazine pages.</li></ul></p>
 <p><ul>Volunteered for various events throughout the year and a part of Blood donation drive.</ul></p>
     <h2>Education</h2>
  <h2>D.J.sanghvi college of engineering</h2>
-<h6>(in SGPA)</h6>
-<ul>SEM 4-    <b>10</b><br>
+<h5>(in SGPA)</h5>
+<ul>Among top 5 ranks<br> SEM 4- <b>10</b>(Rank 1)<br>
 SEM 3-    <b>9.85</b><br>
-	SEM 2-    <b>9.78</b><br>
+	SEM 2-    <b>9.78</b>(Rank 1)<br>
 	SEM 1-    <b>8.56</b></ul>
 <h2>ST.ANNES GIRLS HIGH SCHOOL</h2>
 <p>10 th Grade -  95%</p>
@@ -52,7 +52,7 @@ SEM 3-    <b>9.85</b><br>
     <h2>Current</h2>
 
       <ul>
-        <li>Learning new languages and frame work</li>
+        <li>Learning new languages and frame works such as SQL, R and Tableau</li>
         <li>Volunteering in an NGO called STEM BAALA  once a week teaching small girls</li>
 	<li>Freelancer as a Graphic designer</li>
       </ul>
