--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 <h1> Heta Shah's Portal </h1>
 <h2>About me</h2>
 <p> I am a third year engineering student in Mumbai with a real zest of learning new things.</p>
-<p> I am studying Electronics and Telecommunication engineering</p>
-<p> from Dwarkadas J Sanghvi College of Engineering, Mumbai</p>
-<h2>
-<p><a href="resume.html">My Resume
-   </p></a>
+<p> I am studying Electronics and Telecommunication engineering from Dwarkadas J Sanghvi College of Engineering, Mumbai</p>
+  <p>I have represented India internationally and won 3 rd prize in an Aerodesigning competition. I am academically strong and passionate for creative solutions.</p>    <h2>
+<p><a href="resume.html"><u> My Resume</u></a></p>
 </p></h2>
 <h2>Contact</h2>
 
